# aws-cli-tool

./: .gitignore  README.md  debug_fuzzy.py  pyproject.toml
src/awscli_tool/: __init__.py  config.py  main.py
src/awscli_tool/commands/: apigateway.py  cost.py  ec2.py  ecs.py  s3.py  servicecatalog.py
src/awscli_tool/utils/: aws_client.py  log_formatter.py
