[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-tool"
version = "0.1.0"
description = "CLI tool for AWS automation with SSO support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
aws-tool = "awscli_tool.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/awscli_tool"]
